# email-2-data

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROFILE.md  README.md  ROADMAP.md  VISION.md  docker-compose.yml  pyproject.toml
config/: capture_playbook.md  client_email_template.md  gazetteer.csv  reply_playbook.md  settings.example.json  spec_playbook.md  triage_playbook.md
design/: cockpit.md  draft-architectural-report.md  labelsheet.py  offline-extraction-plan.md  poc-diagnose.py
docs/: 00-overview.md  index.md
docs/01-requirements/: functional-requirements.md  index.md  non-functional-requirements.md  open-questions.md  roadmap.md
docs/02-architecture/: approach.md  index.md  module-map.md
docs/03-decisions/: adr-000-template.md  adr-001-compute-proportional-to-uncertainty-impact.md  index.md  (+20 more)
labels/: README.md  labels.example.csv
standards/: 00-company-context.md  01-hardware-baseline.md  02-network-lan.md  03-engineering-principles.md  04-always-verify.md  05-definition-of-done.md  06-tech-stack-defaults.md  07-project-taxonomy.md  VERSION
tests/: test_accounts.py  test_capture_infer.py  test_capture_resolve.py  test_captures_api.py  test_captures_page.py  test_cascade.py  test_classifier.py  test_cli.py  test_clientdraft.py  test_cockpit.py  test_cockpit_ui.py  test_cockpit_urls_e2e.py  test_config_env.py  test_crm.py  test_crm_relations.py  test_envelope.py  test_extract.py  test_fetch_safety.py  test_fila.py  test_identity.py  test_intake_bot.py  test_intake_store.py  test_jobspec.py  test_llm.py  test_para_ti.py  test_project.py  test_replydraft.py  test_report.py  test_signals.py  test_specdraft.py  test_store.py  test_sync.py  test_telegram_client.py  test_webapp.py  test_workspace.py  test_workspace_migration.py
tools/: cost.py  make_report.py
(+57 files in other folders)
