[project]
name = "email2data"
version = "0.1.0"
description = "Read-only email triage: scan Lindo inboxes, classify type + urgency with Claude, surface a prioritized decision queue."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pypdf>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
# Opt-in browser acceptance tests (tests/test_cockpit_urls_e2e.py). Drives a real Chrome via
# Playwright to assert the cockpit URLs change on click — the one thing TestClient can't verify.
# Uses the system Chrome (channel="chrome"); the suite skips these when this extra isn't installed.
e2e = [
    "playwright>=1.40",
]
vertex = [
    "google-genai>=0.3",
]

[project.scripts]
email2data = "email2data.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
